@@ -5,6 +5,7 @@ Cacti CHANGELOG
 -bug: initialization of snmp_auth when using SNMP=NONE
 -bug: speed up add_graphs.php in most cases (still slow only if --input-fields is used)
 -bug: If the poller_output table is not empty, don't flood the log
+-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
 -feature: add graph title to graphs page
 
 
